--- a/src/main/resources/templates/listado.html
+++ b/src/main/resources/templates/listado.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <!-- Las rutas en Thymeleaf son relativas al directorio static -->
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="/css/estilos2.css">
 </head>
 <body>
-    <h1>Listado de personas</h1>
     <table>
+        <caption>Listado de personas</caption>
         <thead>
             <tr>
-                <th>Nombre</th><th>Edad</th><th>Foto</th>
+                <th>Nombre</th><th>Edad</th><th>Archivo</th><th>Foto</th>
             </tr>
         </thead>
         <tbody>
             <tr th:each="persona : ${listaPersonas}">
                 <td th:text="${persona.nombre}"></td>
                 <td th:text="${persona.edad}"></td>
+                <td th:text="${persona.imagen}"></td>
                 <td><img th:src="@{/img/{img} (img=${persona.imagen})}" /></td>
             </tr>
         </tbody>
