--- a/src/main/resources/static/css/estilos2.css
+++ b/src/main/resources/static/css/estilos2.css
@@ -11,11 +11,10 @@ table th {
     background-color: #278dbc;
     color:#fff;
     font-weight: bold;
-    font-size:16px;
-    padding: 8px;
+    font-size: 1em;
+    padding: 0.5em;
 }
 table td {
-    height: 10px;
     text-align: center;
     border: 1px solid black;
 }
@@ -40,15 +39,8 @@ caption::first-letter {
     color: red;
 }
 
-/*
-table tbody tr:hover {
-    background-color: grey;
-    color: #ffffff;
-}
-*/
-img {
-    width: 100%;
-    height: 150px;
+td img {
+    width: 50%;
 }
 
 h1 {
